modified docker-files